--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,26 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
 
+    <!-- 用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- 用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <!-- 用于访问网络，网络定位需要上网 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 用于读取手机当前的状态 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- 写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!--添加可以向外拨打电话的权限  -->
+    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+
     <application
         android:name=".base.activity.XxtimeApplication"
         android:allowBackup="true"
@@ -27,9 +47,33 @@
         <activity android:name=".activity.RegisterActivity" />
         <!-- web -->
         <activity android:name=".activity.WebH5Activity" />
+
+        <!-- 首页 -->
         <activity android:name=".activity.HomeActivity" />
+        <!-- 忘记密码 -->
         <activity android:name=".activity.ForgetActivity" />
-        <activity android:name=".activity.ResetActivity"></activity>
+        <!-- 重置密码 -->
+        <activity android:name=".activity.ResetActivity" />
+        <activity android:name=".activity.CityChooseActivity" />
+        <activity android:name=".activity.SocialActivity" />
+
+        <service android:name="com.amap.api.location.APSService" />
+
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="b7d5b33ef7b5192f501cd3a4d7f94f54" />
+
+        <activity android:name=".activity.JobSearchActivity" />
+        <activity android:name=".activity.WelfareActivity" />
+        <activity android:name=".activity.JobDetailsActivity" />
+        <activity android:name=".activity.FirmHomeActivity" />
+
+        <!-- 图片大图预览 -->
+        <activity android:name=".activity.PhotosFullActivity" />
+        <activity android:name=".activity.RecruitActivity" />
+        <activity android:name=".activity.RecruitNumberActivity" />
+        <activity android:name=".activity.CommentActivity"></activity>
+        <activity android:name=".activity.ApplyActivity"></activity>
     </application>
 
 </manifest>
