--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
     <!-- 写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <!--添加可以向外拨打电话的权限  -->
-    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+    <!-- 添加可以向外拨打电话的权限 -->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:name=".base.activity.XxtimeApplication"
@@ -72,8 +72,13 @@
         <activity android:name=".activity.PhotosFullActivity" />
         <activity android:name=".activity.RecruitActivity" />
         <activity android:name=".activity.RecruitNumberActivity" />
-        <activity android:name=".activity.CommentActivity"></activity>
-        <activity android:name=".activity.ApplyActivity"></activity>
+        <activity android:name=".activity.CommentActivity" />
+        <activity android:name=".activity.ApplyActivity" />
+        <activity android:name=".activity.BannerDetailsActivity" />
+        <activity android:name=".activity.OnlineJobActivity" />
+        <activity android:name=".activity.PerfectInfoActivity" />
+        <activity android:name=".activity.SelectAreaActivity" />
+        <activity android:name=".activity.SelectLanguageActivity"></activity>
     </application>
 
 </manifest>
