--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     compile files('libs/AMap_Location_V2.7.0_20160726.jar')
     compile files('libs/pinyin4j-2.5.0.jar')
     compile files('libs/uk-co-senab-photoview.jar')
+    compile project(':lib:bdwallet_pay_sdk')
+    compile project(':lib:pingpp')
+    compile project(':lib:pingpp_one')
 }
