--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,6 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
-
     <!-- 通用权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -32,15 +31,14 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.NFC" />
+
     <uses-permission-sdk-23 android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission-sdk-23 android:name="android.permission.NFC" />
-
 
     <!-- 百度支付需要的权限 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.READ_SMS" />
-
 
     <!-- 往sdcard中写入数据的权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -119,9 +117,8 @@
         <activity android:name=".activity.ExtractActivity" />
         <activity android:name=".activity.SelectPayActivity" />
         <activity android:name=".activity.SincerityActivity" />
-        <activity android:name=".activity.RechargeActivity"></activity>
+        <activity android:name=".activity.RechargeActivity" />
 
-      
         <!-- Ping++ sdk -->
         <activity
             android:name="com.pingplusplus.android.PaymentActivity"
@@ -138,32 +135,30 @@
             android:name="com.alipay.sdk.app.H5PayActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
+            android:screenOrientation="behind"></activity>
         <activity
             android:name="com.alipay.sdk.auth.AuthActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
+            android:screenOrientation="behind"></activity>
 
         <!-- 银联支付 sdk -->
         <activity
             android:name="com.unionpay.uppay.PayActivity"
             android:configChanges="orientation|keyboardHidden|navigation|screenSize" />
 
-        <!-- QPay支付 android:scheme 建议填写规则:qwallet + APP_ID-->
+        <!-- QPay支付 android:scheme 建议填写规则:qwallet + APP_ID -->
         <activity
             android:name="com.pingplusplus.android.QPayCallBackActivity"
             android:exported="true"
             android:theme="@android:style/Theme.Translucent">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:scheme="qwalletXXXXXXXX"/>
+                <data android:scheme="qwalletXXXXXXXX" />
             </intent-filter>
         </activity>
 
@@ -308,17 +303,17 @@
             android:theme="@style/EbpayThemeActivit"
             android:windowSoftInputMode="stateHidden" />
 
-
         <!-- 壹收款 -->
         <activity
             android:name="com.pingplusplus.libone.PayActivity"
             android:configChanges="orientation|screenSize"
-            android:theme="@android:style/Theme.Translucent"
-            android:label="@string/pingpp_title_activity_pay"/>
+            android:label="@string/pingpp_title_activity_pay"
+            android:theme="@android:style/Theme.Translucent" />
         <activity
             android:name="com.pingplusplus.libone.PaySuccessActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/pingpp_title_activity_pay_sucessed"/>
+            android:label="@string/pingpp_title_activity_pay_sucessed" />
+        <activity android:name=".activity.ShareActivity"></activity>
     </application>
 
 </manifest>
