工作模板，以及二维码扫描

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     compile project(':lib:bdwallet_pay_sdk')
     compile project(':lib:pingpp')
     compile project(':lib:pingpp_one')
+    compile files('libs/zxing-1.6.jar')
 }
