工作模块，以及校内兼职

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -330,6 +330,7 @@
         <activity android:name=".activity.JobStatusActivity" />
         <activity android:name=".activity.AssessActivity"></activity>
         <activity android:name=".activity.ScanActivity"></activity>
+        <activity android:name=".activity.SchoolJobActivity"></activity>
     </application>
 
 </manifest>
