--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,22 @@ android {
     }
     productFlavors {
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
+    packagingOptions {
+        exclude'META-INF/DEPENDENCIES.txt'
+        exclude'META-INF/LICENSE.txt'
+        exclude'META-INF/NOTICE.txt'
+        exclude'META-INF/NOTICE'
+        exclude'META-INF/LICENSE'
+        exclude'META-INF/DEPENDENCIES'
+        exclude'META-INF/notice.txt'
+        exclude'META-INF/license.txt'
+        exclude'META-INF/dependencies.txt'
+        exclude'META-INF/LGPL2.1'
+    }
 }
 
 dependencies {
@@ -51,4 +67,7 @@ dependencies {
     compile project(':lib:pingpp')
     compile project(':lib:pingpp_one')
     compile files('libs/zxing-1.6.jar')
+    compile files('libs/open_sdk_r5509.jar')
+    compile files('libs/mta-sdk-1.6.2.jar')
+    compile files('libs/libammsdk.jar')
 }
