--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,9 @@ dependencies {
     compile files('libs/AMap_Location_V2.7.0_20160726.jar')
     compile files('libs/pinyin4j-2.5.0.jar')
     compile files('libs/uk-co-senab-photoview.jar')
-    compile files('libs/zxing-1.6.jar')
     compile files('libs/open_sdk_r5509.jar')
     compile files('libs/mta-sdk-1.6.2.jar')
+    compile files('libs/zxing.jar')
     compile project(':lib:pingpp')
     compile project(':lib:pingpp_one')
     compile project(':lib:bdwallet_pay_sdk')
