--- a/lib/bdwallet_pay_sdk/AndroidManifest.xml
+++ b/lib/bdwallet_pay_sdk/AndroidManifest.xml
@@ -3,6 +3,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-sdk
+        android:minSdkVersion="9"
+        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true" >
