--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,10 +69,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:debuggable="false">
 
         <!-- 启动页 -->
-        <activity android:name=".activity.SplashActivity">
+        <activity android:name=".activity.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -80,20 +82,28 @@
             </intent-filter>
         </activity>
         <!-- 登录 -->
-        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait"/>
         <!-- 注册 -->
-        <activity android:name=".activity.RegisterActivity" />
+        <activity android:name=".activity.RegisterActivity"
+            android:screenOrientation="portrait"/>
         <!-- web -->
-        <activity android:name=".activity.WebH5Activity" />
+        <activity android:name=".activity.WebH5Activity"
+            android:screenOrientation="portrait"/>
 
         <!-- 首页 -->
-        <activity android:name=".activity.HomeActivity" />
+        <activity android:name=".activity.HomeActivity"
+            android:screenOrientation="portrait"/>
         <!-- 忘记密码 -->
-        <activity android:name=".activity.ForgetActivity" />
+        <activity android:name=".activity.ForgetActivity"
+            android:screenOrientation="portrait"/>
         <!-- 重置密码 -->
-        <activity android:name=".activity.ResetActivity" />
-        <activity android:name=".activity.CityChooseActivity" />
-        <activity android:name=".activity.SocialActivity" />
+        <activity android:name=".activity.ResetActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.CityChooseActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SocialActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name="com.amap.api.location.APSService" />
 
@@ -101,63 +111,117 @@
             android:name="com.amap.api.v2.apikey"
             android:value="b7d5b33ef7b5192f501cd3a4d7f94f54" />
 
-        <activity android:name=".activity.JobSearchActivity" />
-        <activity android:name=".activity.WelfareActivity" />
-        <activity android:name=".activity.JobDetailsActivity" />
-        <activity android:name=".activity.FirmHomeActivity" />
+        <activity android:name=".activity.JobSearchActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.WelfareActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.JobDetailsActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.FirmHomeActivity"
+            android:screenOrientation="portrait"/>
 
         <!-- 图片大图预览 -->
-        <activity android:name=".activity.PhotosFullActivity" />
-        <activity android:name=".activity.RecruitActivity" />
-        <activity android:name=".activity.RecruitNumberActivity" />
-        <activity android:name=".activity.CommentActivity" />
-        <activity android:name=".activity.ApplyActivity" />
-        <activity android:name=".activity.BannerDetailsActivity" />
-        <activity android:name=".activity.OnlineJobActivity" />
-        <activity android:name=".activity.PerfectInfoActivity" />
-        <activity android:name=".activity.SelectAreaActivity" />
-        <activity android:name=".activity.SelectLanguageActivity" />
-        <activity android:name=".activity.BrowseInfoActivity" />
-        <activity android:name=".activity.PersoninfoActivity" />
-        <activity android:name=".activity.AuthenticationActivity" />
-        <activity android:name=".activity.WalksActivity" />
-        <activity android:name=".activity.MyFollowActivity" />
-        <activity android:name=".activity.SettingActivity" />
-        <activity android:name=".activity.AlterMobileActivity" />
-        <activity android:name=".activity.AlterPwdActivity" />
-        <activity android:name=".activity.FeedbackActivity" />
-        <activity android:name=".activity.JoinActivity" />
-        <activity android:name=".activity.AboutActivity" />
-        <activity android:name=".activity.MymoneyActivity" />
-        <activity android:name=".activity.AlipayActivity" />
-        <activity android:name=".activity.WeixinActivity" />
-        <activity android:name=".activity.TradeListActivity" />
-        <activity android:name=".activity.ExtractActivity" />
-        <activity android:name=".activity.SelectPayActivity" />
-        <activity android:name=".activity.SincerityActivity" />
-        <activity android:name=".activity.RechargeActivity" />
+        <activity android:name=".activity.PhotosFullActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.RecruitActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.RecruitNumberActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.CommentActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ApplyActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.BannerDetailsActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.OnlineJobActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.PerfectInfoActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SelectAreaActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SelectLanguageActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.BrowseInfoActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.PersoninfoActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.AuthenticationActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.WalksActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.MyFollowActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SettingActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.AlterMobileActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.AlterPwdActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.FeedbackActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.JoinActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.AboutActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.MymoneyActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.AlipayActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.WeixinActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.TradeListActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ExtractActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SelectPayActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SincerityActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.RechargeActivity"
+            android:screenOrientation="portrait"/>
 
-        <activity android:name=".activity.ShareActivity" />
-        <activity android:name=".activity.InviteActivity" />
-        <activity android:name=".activity.MsgFollowActivity" />
-        <activity android:name=".activity.MsgApplyActivity" />
-        <activity android:name=".activity.MsgSalaryActivity" />
-        <activity android:name=".activity.MsgWithdrawActivity" />
-        <activity android:name=".activity.MsgSystemActivity" />
-        <activity android:name=".activity.ToemployedActivity" />
-        <activity android:name=".activity.ToaccountdActivity" />
-        <activity android:name=".activity.NoemployActivity" />
-        <activity android:name=".activity.AssessedActivity" />
-        <activity android:name=".activity.ToassessActivity" />
-        <activity android:name=".activity.ToSignActivity" />
-        <activity android:name=".activity.StoodActivity" />
-        <activity android:name=".activity.JobStatusActivity" />
-        <activity android:name=".activity.AssessActivity" />
-        <activity android:name=".activity.ScanActivity" />
-        <activity android:name=".activity.SchoolJobActivity" />
-        <activity android:name=".activity.LablesActivity" />
-        <activity android:name=".activity.SelectSchoolActivity"></activity>
-        <activity android:name=".activity.SelectDegreeActivity"></activity>
+        <activity android:name=".activity.ShareActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.InviteActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.MsgFollowActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.MsgApplyActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.MsgSalaryActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.MsgWithdrawActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.MsgSystemActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ToemployedActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ToaccountdActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.NoemployActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.AssessedActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ToassessActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ToSignActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.StoodActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.JobStatusActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.AssessActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ScanActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SchoolJobActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.LablesActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SelectSchoolActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".activity.SelectDegreeActivity"
+            android:screenOrientation="portrait"></activity>
 
         <!-- Ping++ sdk -->
         <activity
